{
  "sourceLanguage" : "en",
  "strings" : {
    "About to lose your streaks?" : {

    },
    "Allow Notifications" : {

    },
    "Allow notifications so StreakPal can remind you to send your streaks!" : {

    },
    "and" : {

    },
    "Both photo and video Snaps are valid for streaks. However, Chats and Snaps to group chats will not count. Furthermore, Snaps sent with Memories content are also invalid for streaks." : {

    },
    "Check here for some useful tricks for making sure you never lose your streaks." : {

    },
    "Continue" : {

    },
    "Copy Email Address" : {

    },
    "Ding ding! It's streak time!" : {

    },
    "Done" : {

    },
    "Everyone remain calm. Remain calm. REMAIN CALM. OUR STREAKS ARE RUNNING OUT!!! AAAAAAA!!!" : {

    },
    "Finish" : {

    },
    "First Reminder" : {

    },
    "Great! Tap Continue to move on." : {

    },
    "Have you opened Snapchat recently? As you think of your response to this question, ponder this instead: the very fact you are receiving this message indicates that you have not, in fact, checked Snapchat recently. Because if you had, then you would’ve noticed that one (or more) of your streaks is almost out. And noticing that timer icon, you would’ve immediately thought to yourself, “Oh my! My streak has almost expired! I need to send a snap right away!”, sent the snap, and saved the streak. But no. You chose to live the life of an ignorant peanut, oblivious to the twists and turns, the rushing tides, of the world around you. You absolute walnut. Do you have any idea how EASY it is to send a streak? A few taps. Mere seconds of your time. Send a blank screen! Draw an “S”! Do literally anything. But no. You, the ever-so-busy, cannot be bothered to save that burning digital fire which unites you and your friends. Shame on you." : {

    },
    "Information" : {

    },
    "Mark as Time Sensitive" : {

    },
    "Never fear! Tap here to send your friends a strongly worded message encouraging them to snap you back!" : {

    },
    "No Mail App Found" : {

    },
    "No Streak Reminders" : {

    },
    "Notifications" : {

    },
    "Oh. My. God. Ohmygod. Ohhhhhhhhhmmmmmyyyyyyygoddddddddd. SEND YOUR STREAKS!!!" : {

    },
    "OK" : {

    },
    "Only Snaps count for streaks" : {

    },
    "Open Snapchat on Tap" : {

    },
    "Please provide your feedback below. Feature suggestions, bug reports, and more are all appreciated! :)\n\n(If applicable, you may be contacted for more information or for follow-up questions.)\n\n\n" : {

    },
    "Second Reminder" : {

    },
    "Send Feedback" : {

    },
    "Send streaks twice a day" : {

    },
    "Send your streaks before it's too late!" : {

    },
    "Sending streaks both in the morning and in the evening ensures you always maintain your end of the streak and creates an easy routine.\n\nIf you send streaks only once per day, you'll have to send them earlier and earlier each day in order to maintain the 24-hour requirement." : {

    },
    "Set Notifications" : {

    },
    "Set Reminder Times" : {

    },
    "Set Up Reminders…" : {

    },
    "Set Up Streak Reminders…" : {

    },
    "Settings" : {

    },
    "Snapchat's Shortcuts feature allows you to snap multiple friends at once in only a single tap. Creating a \"streaks\" shortcut will enable you to select all the friends you have streaks with instantly instead of one by one." : {

    },
    "Snapstreak Tips!" : {

    },
    "Streak Reminders" : {

    },
    "Streak Tips" : {

    },
    "StreakPal" : {

    },
    "StreakPal App Feedback" : {

    },
    "This is an urgent message. If you do not send your streaks right away, there will be dire consequences for the entire world. This message will self-destruct in five seconds." : {

    },
    "Two Reminders Per Day" : {

    },
    "URGENT NOTIFICATION! URGENT NOTIFICATION! IT IS VERY IMPORTANT THAT YOU READ THIS! Your streaks are about to run out! Aaaaaaahhhh, panic!" : {

    },
    "Use a Shortcut to send faster" : {

    },
    "Version" : {

    },
    "View Privacy Policy" : {

    },
    "We-oo, we-oo! Streak police here! Send 'em! Or else! We-oo, we-oo!" : {

    },
    "When would you like to be reminded to send your streaks? StreakPal recommends two reminders per day." : {

    },
    "With notifications off, you will not receive any reminders from StreakPal. You can always head to Settings to re-enable notifications." : {

    },
    "You can send feedback to %@." : {

    },
    "You must send your streaks. You simply must. There is no other option." : {

    }
  },
  "version" : "1.0"
}